# local_eat/api/docs/swagger.yaml
@@ -15,6 +15,33 @@ definitions:
         example: John.jpg
         type: string
     type: object
+  model.Users:
+    properties:
+      address:
+        example: 1234 Main St
+        type: string
+      age:
+        example: 20
+        type: integer
+      cellphone:
+        example: "1234567890"
+        type: string
+      email:
+        example: John@example.com
+        type: string
+      gender:
+        example: M
+        type: string
+      locality:
+        example: 1650
+        type: integer
+      password:
+        example: "1234"
+        type: string
+      username:
+        example: John
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -22,6 +49,30 @@ info:
   title: local eat API
   version: "1.0"
 paths:
+  /api/auth/signup:
+    post:
+      consumes:
+      - application/json
+      description: Send user data to create a new user
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.Users'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Send user data to create a new user
+      tags:
+      - Auth
   /api/producers:
     get:
       description: Get producers id, name, picture and created values
